--- a/src/gatsby-theme-portfolio-minimal/sections/Contact/style.module.css
+++ b/src/gatsby-theme-portfolio-minimal/sections/Contact/style.module.css
@@ -33,6 +33,39 @@
   font-weight: 700;
 }
 
+.UserDetails {
+  background-color: lightblue;
+}
+
+.expireCol {
+  background-color: lightsalmon;
+}
+
+.keyDownload {
+  background-color: black;
+  color: white;
+  align-items: center;
+}
+
+.keyDownload > * {
+  color: white;
+}
+
+table th {
+  align-items: center;
+}
+
+table tr {
+  width: auto;
+  align-content: center;
+}
+
+tbody {
+  .userId {
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
 @media (min-width: 768px) {
   .Contact .Profile {
     flex-direction: row;
