--- a/src/gatsby-theme-portfolio-minimal/components/Logo/style.module.css
+++ b/src/gatsby-theme-portfolio-minimal/components/Logo/style.module.css
@@ -1,12 +1,13 @@
 .Logo {
   position: relative;
   z-index: 9;
-  font-family: "Slackside One", "La Belle Aurore", Courier, monospace;
+  font-family: "Yuji Boku", Courier, monospace;
   /* Disable effects when sidebar is open */
   filter: none !important;
   pointer-events: auto !important;
   user-select: auto !important;
   line-height: 2.5rem;
+  margin-right: 3em;
 }
 
 .Logo img,
@@ -14,4 +15,5 @@
   width: 160px;
   height: 80px;
   object-fit: contain;
+  margin-right: 10%;
 }
