--- a/src/gatsby-theme-portfolio-minimal/globalStyles/theme.css
+++ b/src/gatsby-theme-portfolio-minimal/globalStyles/theme.css
@@ -39,3 +39,7 @@ body[data-theme="darkTheme"] {
   --code-block-comment: #8292a2;
   --code-block-tkimp: #fd971f;
 }
+
+.section-link {
+  color: #fed703;
+}
