--- a/src/gatsby-theme-portfolio-minimal/sections/Contact/style.module.css
+++ b/src/gatsby-theme-portfolio-minimal/sections/Contact/style.module.css
@@ -51,13 +51,9 @@
   color: white;
 }
 
-table td,
-th {
-  border: 2px solid #444;
-}
-
-table th {
+table th td {
   align-items: center;
+  border: 2px solid #444;
 }
 
 table tr {
