--- a/src/gatsby-theme-portfolio-minimal/sections/Hero/style.module.css
+++ b/src/gatsby-theme-portfolio-minimal/sections/Hero/style.module.css
@@ -11,17 +11,18 @@
 }
 
 .Hero .Title {
-  margin: 0 0 0.6rem 0;
+  margin: 0;
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 2.375rem;
 }
 
 .Hero .Subtitle {
-  margin: 0.8em;
+  margin: 0 0 0.8em 0;
+  border-radius: var(--border-radius);
   padding: 0.8em 0.8em 0.8em 0.4em;
-  background-color: #385385;
-  color: #ccc;
+  background-color: #2891d3;
+  color: #fff;
   margin: -0.5rem 0 0 0;
   font-weight: 700;
   font-size: 1.25rem;
@@ -29,7 +30,8 @@
 }
 
 .Subtitle > u {
-  box-shadow: inset 0 -0.5em 0 #5e4c22;
+  margin: 0 0 0 0;
+  box-shadow: inset 0 -0.5em 0 #e2d4354e;
 }
 
 .Hero p {
@@ -69,7 +71,8 @@
   }
 
   .Hero .Subtitle {
-    margin-top: 1.3em;
+    margin-top: 0.4em;
+    margin-left: -0.8em;
     font-size: 1.4rem;
     color: #ddd;
     line-height: 2.6rem;
