--- a/src/sections/Contact/style.module.css
+++ b/src/sections/Contact/style.module.css
@@ -33,6 +33,9 @@
   font-weight: 700;
 }
 
+.SlideContainer {
+  overflow-x: hidden;
+}
 @media (min-width: 768px) {
   .Contact .Profile {
     flex-direction: row;
